--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 
 :root {
     font-family: "Inter", sans-serif;
-    background: #000000;
-    color-scheme: light;
 }
 
+body{
+    background: #000000;
+}
