--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 :root {
-    font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
-body{
-    background: #000000;
+body {
+  background: #000000;
 }
